<?xml version="1.0"?>
<package format="3">
  <name>safety_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="imhari@mit.edu">racecar</maintainer>
  <license>MIT</license>

  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>mse_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <depend>ackermann_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>rclpy</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>visualization_msgs</depend>
  </export>
</package>
